<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="onClickCustomDialog"
        android:padding="12dp"
        android:text="@string/custom_dialog_normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="showSuccessInstantDialog"
        android:padding="12dp"
        android:text="@string/instant_success_dialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="showErrorInstantDialog"
        android:padding="12dp"
        android:text="@string/instant_error_dialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="showWarningInstantDialog"
        android:padding="12dp"
        android:text="@string/instant_warning_dialog" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="onClickDefaultProgressDialog"
        android:padding="12dp"
        android:text="@string/colored_progress_dialog_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="onClickColoredSimpleProgressDialog"
        android:padding="12dp"
        android:text="@string/colored_progress_dialog_customized" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:onClick="onClickInstantProgressDialog"
        android:padding="12dp"
        android:text="@string/instant_colored_progress_dialog" />

</LinearLayout>

